Add export for javac.parser